following quarto documentation to use GitHub Pages

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "hopla"
@@ -17,4 +18,3 @@ format:
     toc: true
 
 editor: source
-
